--- a/cortex.yaml
+++ b/cortex.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
     title: Billing Gate Keeper
-    description: Data access layer for BPIPE billing tables
+    description: Data access layer for BPIPE billing0 tables
     contact:
         email: billing-pipeline@twilio.com
     version: 1.0.0
@@ -85,7 +85,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BillingTaskPOSTParams'
-  /v1/StoredValueAccount/{StoredValueAccountSid}:
+  /v1/StoredValueAccounts/{StoredValueAccountSid}:
     get:
       summary: Fetch a StoredValueAccount instance by SVA SID
       tags:
