--- a/cortex.yaml
+++ b/cortex.yaml
@@ -85,7 +85,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BillingTaskPOSTParams'
-  /v1/StoredValueAccounts/{StoredValueAccountSid}:
+  /v1/StoredValueAccount/{StoredValueAccountSid}:
     get:
       summary: Fetch a StoredValueAccount instance by SVA SID
       tags:
