--- a/cortex.yaml
+++ b/cortex.yaml
@@ -3,10 +3,12 @@ info:
     title: Billing Gate Keeper
     description: Data access layer for BPIPE billing0 tables
     contact:
-        email: billing-pipeline@twilio.com
+        email: test@getcortexapp.com
     version: 1.0.0
     x-cortex-tag: billing-gate-keeper
-    x-github-repository: gsdatta/BillingGateKeeper
+    x-cortex-git: 
+        github:
+            repository: gsdatta/BillingGateKeeper
     x-cortex-link:
       - name: Github Repository
         type: DOCUMENTATION
