--- a/cortex.yaml
+++ b/cortex.yaml
@@ -1,12 +1,14 @@
 openapi: 3.0.0
 info:
     title: Billing Gate Keeper
-    description: Data access layer for BPIPE billing tables
+    description: Data access layer for BPIPE billing0 tables
     contact:
-        email: billing-pipeline@twilio.com
+        email: test@getcortexapp.com
     version: 1.0.0
     x-cortex-tag: billing-gate-keeper
-    x-github-repository: gsdatta/BillingGateKeeper
+    x-cortex-git: 
+        github:
+            repository: gsdatta/BillingGateKeeper
     x-cortex-link:
       - name: Github Repository
         type: DOCUMENTATION
@@ -85,7 +87,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BillingTaskPOSTParams'
-  /v1/StoredValueAccounts/{StoredValueAccountSid}:
+  /v1/StoredValueAccount/{StoredValueAccountSid}:
     get:
       summary: Fetch a StoredValueAccount instance by SVA SID
       tags:
